--- a/src/styles.css
+++ b/src/styles.css
@@ -50,22 +50,7 @@
 {
     display: flex;
     width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-.form_card
-{
-    width: 80%;
-    height: 80%;
-    background-color: rgb(149, 255, 128);
-    border-radius: 10px;
-}
-.reservationpage
-{
-    display: flex;
-    width: 100%;
-    height: 100%;
+    height: 90%;
     justify-content: center;
     align-items: center;
 }
@@ -73,7 +58,52 @@
 {
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 90%;
     justify-content: center;
     align-items: center;
+}
+.form_card
+{
+    width: 50vw;
+    height: 80vh;
+    background-color: rgb(250, 250, 250);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 768px) {
+    .form_card div h1 {
+        font-size: 1.5em;
+    }
+
+    .form_card p {
+        font-size: 0.5em;
+    }
+}
+.reservationpage
+{
+    display: flex;
+    width: 100%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+}
+.form_container
+{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;    
+}
+@media (max-width: 768px) {
+    .form_card {
+        width: 40vw;
+        padding: 1rem;
+    }
+
+    .form_container {
+        padding: 1rem;
+    }
 }
